--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -1,65 +1,91 @@
-.navbar{
+@import "../../app.scss";
+
+.navbar {
     width: 100%;
     color: white;
     font-size: 14px;
     position: fixed;
     top: 0;
     z-index: 999;
-    background: linear-gradient(to top, transparent 0%, rgb(0,0,0,0.3) 50%);
-    &.scrolled{
+    background: linear-gradient(to top, transparent 0%, rgb(0, 0, 0, 0.3) 50%);
+
+    &.scrolled {
         background-color: var(--main-color);
     }
-    .container{
+
+    .container {
         padding: 0px 50px;
         display: flex;
-        align-items: center ;
+        align-items: center;
         justify-content: space-between;
         height: 70px;
-        .left{
+
+        .left {
             display: flex;
             align-items: center;
-            img{
-                height: 40px;
+
+            img {
+                height: 25px;
                 margin-right: 40px;
-            } 
-            span{
+
+                @include mobile {
+                    display: none;
+                }
+            }
+
+            span {
                 margin-right: 20px;
                 cursor: pointer;
+
+                @include tablet {
+                    display: none;
+                }
+
+                &.navbarmainLinks {
+                    @include tablet {
+                        display: block;
+                    }
+                }
             }
         }
-        .right{
+
+        .right {
             display: flex;
             align-items: center;
-            .icon{
+
+            .icon {
                 margin: 0px 15px;
                 cursor: pointer;
             }
-            img{
+
+            img {
                 width: 30px;
                 height: 30px;
                 border-radius: 5px;
                 object-fit: cover;
                 cursor: pointer;
             }
-            .profile{
-                .options{
+
+            .profile {
+                .options {
                     display: none;
                     background-color: var(--main-color);
                     border-radius: 5px;
                 }
-                span{
+
+                span {
                     padding: 10px;
                     cursor: pointer;
                 }
-                &:hover{
-                    .options{
+
+                &:hover {
+                    .options {
                         display: flex;
                         flex-direction: column;
                         position: absolute;
                     }
                 }
             }
-            
         }
     }
 }
