--- a/client/src/pages/register/register.scss
+++ b/client/src/pages/register/register.scss
@@ -28,6 +28,7 @@
                 font-size: 16px;
                 font-weight: 500;
                 cursor: pointer;
+                z-index: 9999;
             }
         }
     }
