--- a/client/src/components/featured/featured.scss
+++ b/client/src/components/featured/featured.scss
@@ -31,7 +31,8 @@
     img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit:cover;
+        object-position:50% 50%;
     }
 
     .info {
